core/src/lexical/tests/identifiers.go
teste
1break
1teste
123123a // error
1t     // error
?t     // error
compila  // ok
!teste // not error
*teste // not error
_teste // ok
_     // ok
